[tool.poetry]
name = "tap-s3-csv"
version = "1.2.6"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.7"
backoff = "~1.3.2"
boto3 = "~1.9.57"
singer-python = "~5.1.5"
voluptuous = "~0.10.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
