[tool.poetry]
name = "tap-s3-csv"
version = "1.2.7"
description = "Singer.io tap for extracting CSV files from S3"
authors = ["Stitch"]
homepage = "https://singer.io"
classifiers = ["Programming Language :: Python :: 3 :: Only"]

[tool.poetry.dependencies]
python = "~3.7"
backoff = "~1.3.2"
boto3 = "~1.9.57"
singer-python = "~5.1.5"
voluptuous = "~0.10.5"

[tool.poetry.dev-dependencies]

[tool.poetry.plugins."console_scripts"]
tap-s3-csv = "tap_s3_csv:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
