[tool.poetry]
name = "tap-s3-csv"
version = "1.4.9"
description = "Singer.io tap for extracting CSV files from S3"
authors = ["Stitch"]
classifiers = ["Programming Language :: Python :: 3 :: Only"]

[tool.poetry.dependencies]
python = "~3.7"
backoff = "1.8.0"
boto3 = "1.24.53"
singer-encodings = "0.1.2"
singer-python = "5.12.1"
voluptuous = "0.10.5"
clevercsv = "~0.6.3"
cchardet = "2.1.7"
ciso8601 = "^2.2.0"
orjson = "~3.7.12"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
tap-s3-csv = "tap_s3_csv:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
